# Server0

./: .dockerignore  README.md  docker-compose.yaml  nginx.conf
ApplicationServer/: Cargo.toml  dockerfile
ApplicationServer/src/: endpoints.rs  main.rs
ApplicationServer/src/api/: mod.rs
ApplicationServer/src/api/controllers/: auth_controller.rs  email_controller.rs  mod.rs
ApplicationServer/src/api/models/: model.rs
ApplicationServer/src/api/routes/: routes.rs
ApplicationServer/src/auth/: auth_service.rs  mod.rs  model.rs
ApplicationServer/src/email/: email_service.rs  mod.rs
CentralUserDatabase/: dockerfile  init.sql
LoadBalancer/: nginx.conf
