
[package]
name = "application_server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.2"
bytes = "1"
lettre = "0.11.3"
serde ={ version = "1.0.195", features = ["derive"]}
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "postgres","runtime-tokio" ] }
argon2 = "0.5.3"
reqwest = {version = "0.11.24", features = ["json"]}
serde_json = "1"